# lox

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
scripts/: GenerateAst.cpp
scripts/Templates/: Expr.template
src/: Binary.cpp  Binary.h  Expr.h  Lox.cpp  Lox.h  Runner.cpp  Runner.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h  Type.h  Util.cpp  Util.h  main.cpp
